Added PanelController to check which panel was selected

--- a/index.html
+++ b/index.html
@@ -17,24 +17,30 @@
 			<script type="text/javascript" src="app.js"></script>
 			<p>{{"Hello" + " you"}}</p>
 		<!-- ng-init allows to evaluate an expression in the current scope -->
-		<section ng-init="tab =1">
+		<section ng-init="tab =1" ng-controller="PanelController as panel">
 			<ul class="nav nav-pills">
-				<li><a href ng-click="tab = 1">Description</a></li>
-				<li><a href ng-click="tab = 2">specifications</a></li>
-				<li><a href ng-click="tab = 3">reviews</a></li>
+				<li ng-class="{ active: panel.isSelected(1)}">
+					<a href ng-click="panel.selectTab(1)">Description</a>
+				</li>
+				<li ng-class="{ active:panel.isSelected(2)}">
+					<a href ng-click="panel.selectTab(2)">specifications</a>
+				</li>
+				<li ng-class="{ active:panel.isSelected(3)}">
+					<a href ng-click="panel.selectTab(3)">reviews</a>
+				</li>
 			</ul>
 
 			{{tab}}
 
-			<div class="panel" ng-show= "tab === 1">
+			<div class="panel" ng-show="panel.isSelected(1)">
 				<h4>Description</h4>
 				<p>{{product.description}}</p>
 			</div>			
-			<div class="panel" ng-show= "tab === 2">
+			<div class="panel" ng-show="panel.isSelected(2)">
 				<h4>Specifications</h4>
 				<blockquote>None yet</blockquote>
 			</div>
-			<div class="panel" ng-show= "tab === 3">
+			<div class="panel" ng-show="panel.isSelected(3)">
 				<h4>Reviews</h4>
 				<blockquote>None yet</blockquote>
 			</div>
