Added ReviewController for accepting submissions

--- a/index.html
+++ b/index.html
@@ -50,20 +50,20 @@
 					{{review.body}}
 					<cite>by: {{review.author}}</cite>
 				</blockquote>
-				<form name="reviewForm">
+				<form name="reviewForm" ng-controller="ReviewController as reviewCtrl" ng-submit="reviewCtrl.addReview(product)">
 					<blockquote>
-						<b>Stars: {{review.stars}}</b>
-						{{review.body}}
-						<cite>by: {{review.author}}</cite>
+						<b>Stars: {{reviewCtrl.review.stars}}</b>
+						{{reviewCtrl.review.body}}
+						<cite>by: {{reviewCtrl.review.author}}</cite>
 					</blockquote>
 					<!-- ng-model binds the form element value to the review.stars property (ook dit heet 2-way data binding)-->
-					<select class="form-control" ng-model="review.stars">
+					<select class="form-control" ng-model="reviewCtrl.review.stars">
 						<option value="1">1 star</option>
 						<option value="2">2 stars</option>
 					</select>
-					<textarea class="form-control" ng-model="review.body"></textarea>
+					<textarea class="form-control" ng-model="reviewCtrl.review.body"></textarea>
 					<label>by: </label>
-					<input class="form-control" ng-model="review.author" type="email" />
+					<input class="form-control" ng-model="reviewCtrl.review.author" type="email" />
 					<input class="btn btn-primary pull-right" type="submit" value="Submit" />
 				</form>
 			</section>
