--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			<!--</div>-->
 			<script type="text/javascript" src="angular.min.js"></script>
 			<script type="text/javascript" src="app.js"></script>
+			<script type="text/javascript" src="products.js"></script>
 			<p>{{"Hello" + " you"}}</p>
 			<h3><product-title></h3>
 			<product-panels>
